# oaytmd

./: Cargo.toml  LICENSE  README.md  build.sh
assets/: manifest.json
companion/: Cargo.toml
companion/src/: client.rs  error.rs  lib.rs  models.rs
companion/src/client/: rest.rs  socket.rs
companion/src/models/: request.rs  response.rs  shared.rs
pi/: package.json  svelte.config.ts
pi/src/: app.html
pi/src/lib/: ApplicationSettings.svelte
pi/src/routes/: layout.css
pi/src/routes/simple/: +page.svelte
pi/src/routes/volumecontrol/: +page.svelte
src/: actions.rs  client.rs  main.rs  ws_events.rs
src/actions/: next.rs  play_pause.rs  previous.rs  repeat.rs  shuffle.rs  volume_control.rs
ytmd-companion/src/: client.rs  error.rs
ytmd-companion/src/client/: rest.rs  socket.rs
ytmd-companion/src/models/: response.rs
