[workspace]
resolve = "3"
members = [
    "companion"
]

[workspace.dependencies]
arc-swap = "1.9"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"

reqwest = { version = "0.13", default-features = false, features = ["json"] }
rust_socketio = { version = "*", features = ["async"] }

log = "0.4"
thiserror = "1.0"

[package]
name = "oaytmd"
version = "0.1.0"
edition = "2024"

[dependencies]
ytmd-companion-rs = { path = "companion" }

openaction = "2.3"

arc-swap.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

log.workspace = true
simplelog = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
