[workspace]
resolver = "3"
members = [
    "ytmd-companion"
]

[workspace.dependencies]
arc-swap = "1.9"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

openaction = "2.3"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"

reqwest = { version = "0.13", default-features = false, features = ["json"] }
rust_socketio = { version = "*", features = ["async"] }

log = "0.4"
simplelog = "0.12"
thiserror = "1.0"

[package]
name = "oaytmd"
version = "0.1.0"
edition = "2024"

[dependencies]
oaytmd-companion = { path = "ytmd-companion" }

openaction.workspace = true

arc-swap.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

log.workspace = true
simplelog.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
