[package]
name = "ytmd-companion-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap.workspace = true
tokio.workspace = true
futures-util.workspace = true

reqwest.workspace = true
rust_socketio.workspace = true

serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true

thiserror.workspace = true
